--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -1,12 +1,6 @@
-/*
-Theme Name: Code 'n' stuff
-Author: Phil Parsons
-Author URI: http://philparsons.co.uk
-License URI: license.txt
-*/
-
 /* =Reset default browser CSS. Based on work by Eric Meyer: http://meyerweb.com/eric/tools/css/reset/index.html
 -------------------------------------------------------------- */
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -15,46 +9,46 @@ small, strike, strong, sub, sup, tt, var,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td {
-  border: 0;
-  font-family: inherit;
-  font-size: 100%;
-  font-style: inherit;
-  font-weight: inherit;
-  margin: 0;
-  outline: 0;
-  padding: 0;
-  vertical-align: baseline; }
-
-:focus {
-  /* remember to define focus styles! */
-  outline: 0; }
-
+	border: 0;
+	font-family: inherit;
+	font-size: 100%;
+	font-style: inherit;
+	font-weight: inherit;
+	margin: 0;
+	outline: 0;
+	padding: 0;
+	vertical-align: baseline;
+}
+:focus {/* remember to define focus styles! */
+	outline: 0;
+}
 body {
-  background: #fff;
-  line-height: 1; }
-
+	background: #fff;
+	line-height: 1;
+}
 ol, ul {
-  list-style: none; }
-
-table {
-  /* tables still need 'cellspacing="0"' in the markup */
-  border-collapse: separate;
-  border-spacing: 0; }
-
+	list-style: none;
+}
+table {/* tables still need 'cellspacing="0"' in the markup */
+	border-collapse: separate;
+	border-spacing: 0;
+}
 caption, th, td {
-  font-weight: normal;
-  text-align: left; }
-
+	font-weight: normal;
+	text-align: left;
+}
 blockquote:before, blockquote:after,
 q:before, q:after {
-  content: ""; }
-
+	content: "";
+}
 blockquote, q {
-  quotes: "" ""; }
-
+	quotes: "" "";
+}
 a img {
-  border: 0; }
-
+	border: 0;
+}
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-  display: block; }
+	display: block;
+}
+
