--- a/style.css
+++ b/style.css
@@ -1,60 +1,71 @@
 /*
-Theme Name: Code 'n' stuff
-Author: Phil Parsons
-Author URI: http://philparsons.co.uk
-License URI: license.txt
+Syntax error: File to import not found or unreadable: ../images/social-icons/*.png.
+              Load path: C:/inetpub/wwwroot/blog-new-theme/wp-content/themes/custom
+        on line 9 of sass/theme.scss
+
+4: Author URI: http://philparsons.co.uk
+5: License URI: license.txt
+6: */
+7: 
+8: @import 'var', 'mixins', 'reset', 'base_elements';
+9: @import '../images/social-icons/*.png';
+10: @include all-social-icons-sprites;
+11: 
+12: /* =
+13: ----------------------------------------------------------------------------- */
+14: body { background: url(images/main-bg.jpg) no-repeat #9c958e }
+
+Backtrace:
+sass/theme.scss:9
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/tree/import_node.rb:64:in `rescue in import'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/tree/import_node.rb:42:in `import'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/tree/import_node.rb:25:in `imported_file'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/tree/visitors/perform.rb:149:in `rescue in visit_import'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/tree/visitors/perform.rb:154:in `visit_import'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/tree/visitors/base.rb:37:in `visit'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/tree/visitors/perform.rb:18:in `visit'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/tree/visitors/base.rb:53:in `block in visit_children'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/tree/visitors/base.rb:53:in `map'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/tree/visitors/base.rb:53:in `visit_children'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/tree/visitors/perform.rb:27:in `block in visit_children'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/tree/visitors/perform.rb:39:in `with_environment'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/tree/visitors/perform.rb:26:in `visit_children'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/tree/visitors/base.rb:37:in `block in visit'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/tree/visitors/perform.rb:47:in `visit_root'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/tree/visitors/base.rb:37:in `visit'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/tree/visitors/perform.rb:18:in `visit'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/tree/visitors/perform.rb:7:in `visit'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/tree/root_node.rb:20:in `render'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/engine.rb:299:in `_render'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/engine.rb:246:in `render'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/plugin/compiler.rb:339:in `update_stylesheet'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/plugin/compiler.rb:202:in `block in update_stylesheets'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/plugin/compiler.rb:200:in `each'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/plugin/compiler.rb:200:in `update_stylesheets'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/plugin/compiler.rb:293:in `block (4 levels) in watch'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/vendor/fssm/lib/fssm/path.rb:73:in `call'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/vendor/fssm/lib/fssm/path.rb:73:in `run_callback'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/vendor/fssm/lib/fssm/path.rb:55:in `callback_action'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/vendor/fssm/lib/fssm/path.rb:35:in `update'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/vendor/fssm/lib/fssm/state/file.rb:19:in `refresh'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/vendor/fssm/lib/fssm/backends/polling.rb:17:in `block (2 levels) in run'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/vendor/fssm/lib/fssm/backends/polling.rb:17:in `each'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/vendor/fssm/lib/fssm/backends/polling.rb:17:in `block in run'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/vendor/fssm/lib/fssm/backends/polling.rb:15:in `loop'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/vendor/fssm/lib/fssm/backends/polling.rb:15:in `run'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/vendor/fssm/lib/fssm/monitor.rb:26:in `run'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/vendor/fssm/lib/fssm.rb:20:in `monitor'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/plugin/compiler.rb:265:in `watch'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/plugin.rb:107:in `method_missing'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/exec.rb:421:in `watch_or_update'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/exec.rb:302:in `process_result'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/exec.rb:41:in `parse'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/lib/sass/exec.rb:21:in `parse!'
+C:/Ruby193/lib/ruby/gems/1.9.1/gems/sass-3.1.13/bin/sass:8:in `<top (required)>'
+C:/Ruby193/bin/sass:19:in `load'
+C:/Ruby193/bin/sass:19:in `<main>'
 */
-
-/* =Reset default browser CSS. Based on work by Eric Meyer: http://meyerweb.com/eric/tools/css/reset/index.html
--------------------------------------------------------------- */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, font, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td {
-  border: 0;
-  font-family: inherit;
-  font-size: 100%;
-  font-style: inherit;
-  font-weight: inherit;
-  margin: 0;
-  outline: 0;
-  padding: 0;
-  vertical-align: baseline; }
-
-:focus {
-  /* remember to define focus styles! */
-  outline: 0; }
-
-body {
-  background: #fff;
-  line-height: 1; }
-
-ol, ul {
-  list-style: none; }
-
-table {
-  /* tables still need 'cellspacing="0"' in the markup */
-  border-collapse: separate;
-  border-spacing: 0; }
-
-caption, th, td {
-  font-weight: normal;
-  text-align: left; }
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: ""; }
-
-blockquote, q {
-  quotes: "" ""; }
-
-a img {
-  border: 0; }
-
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block; }
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Syntax error: File to import not found or unreadable: ../images/social-icons/*.png.\A               Load path: C:/inetpub/wwwroot/blog-new-theme/wp-content/themes/custom\A         on line 9 of sass/theme.scss\A \A 4: Author URI: http://philparsons.co.uk\A 5: License URI: license.txt\A 6: */\A 7: \A 8: @import 'var', 'mixins', 'reset', 'base_elements';\A 9: @import '../images/social-icons/*.png';\A 10: @include all-social-icons-sprites;\A 11: \A 12: /* =\A 13: ----------------------------------------------------------------------------- */\A 14: body { background: url(images/main-bg.jpg) no-repeat #9c958e }"; }
