--- a/sass/_var.scss
+++ b/sass/_var.scss
@@ -1,6 +1,12 @@
 // dimensions
 $thin_padding: 5px;
 
+$gap: 10px;
+
 
 // colors
-$cl_theme_elements: #0259cf;
+$cl_theme_elements: #b900da;
+
+
+// fonts
+$display_font: 'Cabin Condensed', helvetica, Arial, sans-serif;
