adding style changes

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,3 +1,7 @@
+html {
+  font: .85em/1.2 helvetica, Arial, sans-serif;
+}
+
 a { color: #00e }
 a:visited { color: #551a8b }
 a:hover { color: #06e }
