--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -11,4 +11,5 @@ a:hover, a:active { outline: 0 }
 h1,h2,h3,h4 {
   font-family: $display_font;
   font-weight: 500;
+  text-transform: uppercase;
 }
