--- a/sass/_var.scss
+++ b/sass/_var.scss
@@ -1,11 +1,13 @@
 // dimensions
+$padding: 20px;
 $thin_padding: 5px;
 
 $gap: 10px;
-
+$thin_gap: $gap / 2;
 
 // colors
-$cl_theme_elements: #b900da;
+$cl_theme_elements: #0071da;
+$cl_neutral_bg: #ddd;
 
 
 // fonts
