--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -12,7 +12,13 @@ h1,h2,h3,h4 {
   font-family: $display_font;
   font-weight: 500;
   text-transform: uppercase;
+  line-height: 1;
+  margin: 0 0 .4em 0;
 }
+
+h1 { font-size: 2.8em }
+h2 { font-size: 2em }
+h3 { font-size: 1.8em }
 
 p {
 
