--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -78,7 +78,18 @@ a:hover, a:active {
 h1, h2, h3, h4 {
   font-family: "Cabin Condensed", helvetica, Arial, sans-serif;
   font-weight: 500;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  line-height: 1;
+  margin: 0 0 .4em 0; }
+
+h1 {
+  font-size: 2.8em; }
+
+h2 {
+  font-size: 2em; }
+
+h3 {
+  font-size: 1.8em; }
 
 p img {
   float: left;
@@ -158,12 +169,12 @@ body {
 #about-me-icn {
   background-position: 0 -208px; }
   #about-me-icn:hover {
-    background-color: #0071da; }
+    background-color: #5400c7; }
 
 #config-icn {
   background-position: 0 0; }
   #config-icn:hover {
-    background-color: #0071da; }
+    background-color: #5400c7; }
 
 #info-box {
   padding: 20px;
@@ -203,7 +214,7 @@ body {
 
 .skill-level {
   display: block;
-  background: #0071da;
+  background: #5400c7;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -301,7 +312,7 @@ body {
     color: white;
     width: 140px; }
     .primary-nav-link:hover .pnl-icn {
-      background-color: #0071da !important; }
+      background-color: #5400c7 !important; }
 
 /* =Featured project slider
 ----------------------------------------------------------------------------- */
@@ -310,8 +321,9 @@ body {
 
 #featured-project-nav {
   position: absolute;
-  top: 0;
-  right: 0; }
+  top: 5px;
+  right: 5px;
+  z-index: 2; }
 
 #feature-links {
   overflow: hidden; }
@@ -326,9 +338,10 @@ body {
   background-color: #dddddd;
   display: block;
   float: left;
-  margin: 0 0 0 5px; }
+  margin: 0 0 0 5px;
+  border: solid 1px #aaa; }
   .feature-link.current {
-    background-color: #0071da; }
+    background-color: #5400c7; }
 
 .featured-project {
   margin: 0;
@@ -340,10 +353,21 @@ body {
   background: white;
   background: rgba(255, 255, 255, 0.8);
   display: block;
-  float: left; }
+  position: absolute;
+  top: 0;
+  right: 0; }
 
 .feature-desc {
-  float: left; }
+  margin: 0 710px 0 0;
+  min-height: 330px; }
+
+/* =Layout elements
+----------------------------------------------------------------------------- */
+.dark-content-box {
+  background: black;
+  background: rgba(0, 0, 0, 0.8);
+  padding: 10px;
+  color: white; }
 
 /* =Utils
 ----------------------------------------------------------------------------- */
