--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -86,7 +86,7 @@ h1 {
   font-size: 2.8em; }
 
 h2 {
-  font-size: 2em; }
+  font-size: 2.4em; }
 
 h3 {
   font-size: 1.8em; }
@@ -116,7 +116,7 @@ body {
   overflow: hidden; }
 
 .icons-sprite, #flickr-icn, #twitter-icn, #linkedin-icn, #gplus-icn, #subscribe-icn, #about-me-icn, #config-icn, #pnl-11, #pnl-12 {
-  background: url('../images/icons-s860a3a1229.png') no-repeat; }
+  background: url('../images/icons-se92761eb27.png') no-repeat; }
 
 #sm-links {
   overflow: hidden;
@@ -129,34 +129,37 @@ body {
   float: left;
   width: 40px;
   height: 40px;
-  -webkit-transition: background-color, 0.3s;
-  -moz-transition: background-color, 0.3s;
-  -ms-transition: background-color, 0.3s;
-  -o-transition: background-color, 0.3s;
-  transition: background-color, 0.3s; }
+  -moz-transition-property: background-color;
+  -webkit-transition-property: background-color;
+  -o-transition-property: background-color;
+  transition-property: background-color;
+  -moz-transition-duration: 0.3s;
+  -webkit-transition-duration: 0.3s;
+  -o-transition-duration: 0.3s;
+  transition-duration: 0.3s; }
 
 #flickr-icn {
-  background-position: 0 -248px; }
+  background-position: 0 -88px; }
   #flickr-icn:hover {
     background-color: #FE63BB; }
 
 #twitter-icn {
-  background-position: 0 -80px; }
+  background-position: 0 -336px; }
   #twitter-icn:hover {
     background-color: #019AD2; }
 
 #linkedin-icn {
-  background-position: 0 -288px; }
+  background-position: 0 -168px; }
   #linkedin-icn:hover {
     background-color: #0571A6; }
 
 #gplus-icn {
-  background-position: 0 -40px; }
+  background-position: 0 -128px; }
   #gplus-icn:hover {
     background-color: #C53727; }
 
 #subscribe-icn {
-  background-position: 0 -120px; }
+  background-position: 0 -296px; }
   #subscribe-icn:hover {
     background-color: #ff7200; }
 
@@ -167,12 +170,12 @@ body {
     display: inline; }
 
 #about-me-icn {
-  background-position: 0 -208px; }
+  background-position: 0 0; }
   #about-me-icn:hover {
     background-color: #5400c7; }
 
 #config-icn {
-  background-position: 0 0; }
+  background-position: 0 -256px; }
   #config-icn:hover {
     background-color: #5400c7; }
 
@@ -198,6 +201,11 @@ body {
   font-size: 2.4em;
   margin: 0 0 .4em; }
 
+.cw-badge {
+  width: 48px;
+  height: 48px;
+  margin: 0 5px 5px 0; }
+
 .skill-bar {
   position: relative;
   margin: 0 0 5px; }
@@ -220,14 +228,16 @@ body {
   bottom: 0;
   left: 0;
   width: 0;
-  -webkit-transition: width, 2s;
-  -moz-transition: width, 2s;
-  -ms-transition: width, 2s;
-  -o-transition: width, 2s;
-  transition: width, 2s;
-  -webkit-transition-timing-function: cubic-bezier(0.7, 0.2, 0.1, 1);
+  -moz-transition-property: width;
+  -webkit-transition-property: width;
+  -o-transition-property: width;
+  transition-property: width;
+  -moz-transition-duration: 2s;
+  -webkit-transition-duration: 2s;
+  -o-transition-duration: 2s;
+  transition-duration: 2s;
   -moz-transition-timing-function: cubic-bezier(0.7, 0.2, 0.1, 1);
-  -ms-transition-timing-function: cubic-bezier(0.7, 0.2, 0.1, 1);
+  -webkit-transition-timing-function: cubic-bezier(0.7, 0.2, 0.1, 1);
   -o-transition-timing-function: cubic-bezier(0.7, 0.2, 0.1, 1);
   transition-timing-function: cubic-bezier(0.7, 0.2, 0.1, 1); }
 
@@ -255,7 +265,8 @@ body {
 #site-title {
   font-size: 38px;
   line-height: 38px;
-  padding: 5px; }
+  padding: 5px;
+  margin: 0; }
   #site-title a {
     color: white;
     text-decoration: none; }
@@ -269,21 +280,24 @@ body {
   display: inline; }
 
 #pnl-11 {
-  background-position: 0 -160px; }
+  background-position: 0 -208px; }
 
 #pnl-12 {
-  background-position: 0 -328px; }
+  background-position: 0 -40px; }
 
 .pnl-icn {
   display: block;
   float: left;
   width: 48px;
   height: 48px;
-  -webkit-transition: background-color, 0.4s;
-  -moz-transition: background-color, 0.4s;
-  -ms-transition: background-color, 0.4s;
-  -o-transition: background-color, 0.4s;
-  transition: background-color, 0.4s; }
+  -moz-transition-property: background-color;
+  -webkit-transition-property: background-color;
+  -o-transition-property: background-color;
+  transition-property: background-color;
+  -moz-transition-duration: 0.4s;
+  -webkit-transition-duration: 0.4s;
+  -o-transition-duration: 0.4s;
+  transition-duration: 0.4s; }
 
 .pnl-txt {
   font: 500 16px/1 "Cabin Condensed", helvetica, Arial, sans-serif;
@@ -303,11 +317,14 @@ body {
   width: 48px;
   height: 48px;
   overflow: hidden;
-  -webkit-transition: width, 0.4s;
-  -moz-transition: width, 0.4s;
-  -ms-transition: width, 0.4s;
-  -o-transition: width, 0.4s;
-  transition: width, 0.4s; }
+  -moz-transition-property: width;
+  -webkit-transition-property: width;
+  -o-transition-property: width;
+  transition-property: width;
+  -moz-transition-duration: 0.4s;
+  -webkit-transition-duration: 0.4s;
+  -o-transition-duration: 0.4s;
+  transition-duration: 0.4s; }
   .primary-nav-link:hover {
     color: white;
     width: 140px; }
@@ -317,7 +334,9 @@ body {
 /* =Featured project slider
 ----------------------------------------------------------------------------- */
 #featured-projects {
-  position: relative; }
+  position: relative;
+  height: 350px;
+  overflow: hidden; }
 
 #featured-project-nav {
   position: absolute;
@@ -348,7 +367,7 @@ body {
   overflow: hidden; }
 
 .feature {
-  width: 700px;
+  width: 740px;
   height: 350px;
   background: white;
   background: rgba(255, 255, 255, 0.8);
@@ -358,8 +377,9 @@ body {
   right: 0; }
 
 .feature-desc {
-  margin: 0 710px 0 0;
-  min-height: 330px; }
+  margin: 0 750px 0 0;
+  height: 330px;
+  overflow: auto; }
 
 /* =Layout elements
 ----------------------------------------------------------------------------- */
