--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -116,8 +116,9 @@ body {
   overflow: hidden; }
 
 .icons-sprite, #flickr-icn, #twitter-icn, #linkedin-icn, #gplus-icn, #subscribe-icn, #about-me-icn, #config-icn, #pnl-11, #pnl-12 {
-  background: url('../images/icons-se92761eb27.png') no-repeat; }
+  background: url('../images/icons-s860a3a1229.png') no-repeat; }
 
+/* load sprite */
 #sm-links {
   overflow: hidden;
   float: right; }
@@ -129,37 +130,34 @@ body {
   float: left;
   width: 40px;
   height: 40px;
-  -moz-transition-property: background-color;
-  -webkit-transition-property: background-color;
-  -o-transition-property: background-color;
-  transition-property: background-color;
-  -moz-transition-duration: 0.3s;
-  -webkit-transition-duration: 0.3s;
-  -o-transition-duration: 0.3s;
-  transition-duration: 0.3s; }
+  -webkit-transition: background-color, 0.3s;
+  -moz-transition: background-color, 0.3s;
+  -ms-transition: background-color, 0.3s;
+  -o-transition: background-color, 0.3s;
+  transition: background-color, 0.3s; }
 
 #flickr-icn {
-  background-position: 0 -88px; }
+  background-position: 0 -248px; }
   #flickr-icn:hover {
     background-color: #FE63BB; }
 
 #twitter-icn {
-  background-position: 0 -336px; }
+  background-position: 0 -80px; }
   #twitter-icn:hover {
     background-color: #019AD2; }
 
 #linkedin-icn {
-  background-position: 0 -168px; }
+  background-position: 0 -288px; }
   #linkedin-icn:hover {
     background-color: #0571A6; }
 
 #gplus-icn {
-  background-position: 0 -128px; }
+  background-position: 0 -40px; }
   #gplus-icn:hover {
     background-color: #C53727; }
 
 #subscribe-icn {
-  background-position: 0 -296px; }
+  background-position: 0 -120px; }
   #subscribe-icn:hover {
     background-color: #ff7200; }
 
@@ -170,17 +168,18 @@ body {
     display: inline; }
 
 #about-me-icn {
-  background-position: 0 0; }
+  background-position: 0 -208px; }
   #about-me-icn:hover {
     background-color: #5400c7; }
 
 #config-icn {
-  background-position: 0 -256px; }
+  background-position: 0 0; }
   #config-icn:hover {
     background-color: #5400c7; }
 
 #info-box {
   padding: 20px;
+  height: 200px;
   background: white;
   position: relative;
   top: -300px;
@@ -228,16 +227,14 @@ body {
   bottom: 0;
   left: 0;
   width: 0;
-  -moz-transition-property: width;
-  -webkit-transition-property: width;
-  -o-transition-property: width;
-  transition-property: width;
-  -moz-transition-duration: 2s;
-  -webkit-transition-duration: 2s;
-  -o-transition-duration: 2s;
-  transition-duration: 2s;
-  -moz-transition-timing-function: cubic-bezier(0.7, 0.2, 0.1, 1);
+  -webkit-transition: width, 2s;
+  -moz-transition: width, 2s;
+  -ms-transition: width, 2s;
+  -o-transition: width, 2s;
+  transition: width, 2s;
   -webkit-transition-timing-function: cubic-bezier(0.7, 0.2, 0.1, 1);
+  -moz-transition-timing-function: cubic-bezier(0.7, 0.2, 0.1, 1);
+  -ms-transition-timing-function: cubic-bezier(0.7, 0.2, 0.1, 1);
   -o-transition-timing-function: cubic-bezier(0.7, 0.2, 0.1, 1);
   transition-timing-function: cubic-bezier(0.7, 0.2, 0.1, 1); }
 
@@ -280,24 +277,21 @@ body {
   display: inline; }
 
 #pnl-11 {
-  background-position: 0 -208px; }
+  background-position: 0 -160px; }
 
 #pnl-12 {
-  background-position: 0 -40px; }
+  background-position: 0 -328px; }
 
 .pnl-icn {
   display: block;
   float: left;
   width: 48px;
   height: 48px;
-  -moz-transition-property: background-color;
-  -webkit-transition-property: background-color;
-  -o-transition-property: background-color;
-  transition-property: background-color;
-  -moz-transition-duration: 0.4s;
-  -webkit-transition-duration: 0.4s;
-  -o-transition-duration: 0.4s;
-  transition-duration: 0.4s; }
+  -webkit-transition: background-color, 0.4s;
+  -moz-transition: background-color, 0.4s;
+  -ms-transition: background-color, 0.4s;
+  -o-transition: background-color, 0.4s;
+  transition: background-color, 0.4s; }
 
 .pnl-txt {
   font: 500 16px/1 "Cabin Condensed", helvetica, Arial, sans-serif;
@@ -317,14 +311,11 @@ body {
   width: 48px;
   height: 48px;
   overflow: hidden;
-  -moz-transition-property: width;
-  -webkit-transition-property: width;
-  -o-transition-property: width;
-  transition-property: width;
-  -moz-transition-duration: 0.4s;
-  -webkit-transition-duration: 0.4s;
-  -o-transition-duration: 0.4s;
-  transition-duration: 0.4s; }
+  -webkit-transition: width, 0.4s;
+  -moz-transition: width, 0.4s;
+  -ms-transition: width, 0.4s;
+  -o-transition: width, 0.4s;
+  transition: width, 0.4s; }
   .primary-nav-link:hover {
     color: white;
     width: 140px; }
