adding style changes

--- a/sass/_var.scss
+++ b/sass/_var.scss
@@ -9,6 +9,7 @@ $thin_gap: $gap / 2;
 // colors
 $cl_theme_elements: #b637ff;
 $cl_neutral_bg: #ddd;
+$cl_content_text: #444;
 
 // fonts
 $display_font: 'Cabin Condensed', helvetica, Arial, sans-serif;
