--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -116,7 +116,7 @@ body {
   overflow: hidden; }
 
 .icons-sprite, #flickr-icn, #twitter-icn, #linkedin-icn, #gplus-icn, #subscribe-icn, #about-me-icn, #config-icn, #pnl-11, #pnl-12 {
-  background: url('../images/icons-s860a3a1229.png') no-repeat; }
+  background: url('../images/icons-se92761eb27.png') no-repeat; }
 
 /* load sprite */
 #sm-links {
@@ -130,34 +130,37 @@ body {
   float: left;
   width: 40px;
   height: 40px;
-  -webkit-transition: background-color, 0.3s;
-  -moz-transition: background-color, 0.3s;
-  -ms-transition: background-color, 0.3s;
-  -o-transition: background-color, 0.3s;
-  transition: background-color, 0.3s; }
+  -moz-transition-property: background-color;
+  -webkit-transition-property: background-color;
+  -o-transition-property: background-color;
+  transition-property: background-color;
+  -moz-transition-duration: 0.3s;
+  -webkit-transition-duration: 0.3s;
+  -o-transition-duration: 0.3s;
+  transition-duration: 0.3s; }
 
 #flickr-icn {
-  background-position: 0 -248px; }
+  background-position: 0 -88px; }
   #flickr-icn:hover {
     background-color: #FE63BB; }
 
 #twitter-icn {
-  background-position: 0 -80px; }
+  background-position: 0 -336px; }
   #twitter-icn:hover {
     background-color: #019AD2; }
 
 #linkedin-icn {
-  background-position: 0 -288px; }
+  background-position: 0 -168px; }
   #linkedin-icn:hover {
     background-color: #0571A6; }
 
 #gplus-icn {
-  background-position: 0 -40px; }
+  background-position: 0 -128px; }
   #gplus-icn:hover {
     background-color: #C53727; }
 
 #subscribe-icn {
-  background-position: 0 -120px; }
+  background-position: 0 -296px; }
   #subscribe-icn:hover {
     background-color: #ff7200; }
 
@@ -168,12 +171,12 @@ body {
     display: inline; }
 
 #about-me-icn {
-  background-position: 0 -208px; }
+  background-position: 0 0; }
   #about-me-icn:hover {
     background-color: #b637ff; }
 
 #config-icn {
-  background-position: 0 0; }
+  background-position: 0 -256px; }
   #config-icn:hover {
     background-color: #b637ff; }
 
@@ -227,14 +230,16 @@ body {
   bottom: 0;
   left: 0;
   width: 0;
-  -webkit-transition: width, 2s;
-  -moz-transition: width, 2s;
-  -ms-transition: width, 2s;
-  -o-transition: width, 2s;
-  transition: width, 2s;
-  -webkit-transition-timing-function: cubic-bezier(0.7, 0.2, 0.1, 1);
+  -moz-transition-property: width;
+  -webkit-transition-property: width;
+  -o-transition-property: width;
+  transition-property: width;
+  -moz-transition-duration: 2s;
+  -webkit-transition-duration: 2s;
+  -o-transition-duration: 2s;
+  transition-duration: 2s;
   -moz-transition-timing-function: cubic-bezier(0.7, 0.2, 0.1, 1);
-  -ms-transition-timing-function: cubic-bezier(0.7, 0.2, 0.1, 1);
+  -webkit-transition-timing-function: cubic-bezier(0.7, 0.2, 0.1, 1);
   -o-transition-timing-function: cubic-bezier(0.7, 0.2, 0.1, 1);
   transition-timing-function: cubic-bezier(0.7, 0.2, 0.1, 1); }
 
@@ -277,21 +282,24 @@ body {
   display: inline; }
 
 #pnl-11 {
-  background-position: 0 -160px; }
+  background-position: 0 -208px; }
 
 #pnl-12 {
-  background-position: 0 -328px; }
+  background-position: 0 -40px; }
 
 .pnl-icn {
   display: block;
   float: left;
   width: 48px;
   height: 48px;
-  -webkit-transition: background-color, 0.4s;
-  -moz-transition: background-color, 0.4s;
-  -ms-transition: background-color, 0.4s;
-  -o-transition: background-color, 0.4s;
-  transition: background-color, 0.4s; }
+  -moz-transition-property: background-color;
+  -webkit-transition-property: background-color;
+  -o-transition-property: background-color;
+  transition-property: background-color;
+  -moz-transition-duration: 0.4s;
+  -webkit-transition-duration: 0.4s;
+  -o-transition-duration: 0.4s;
+  transition-duration: 0.4s; }
 
 .pnl-txt {
   font: 500 16px/1 "Cabin Condensed", helvetica, Arial, sans-serif;
@@ -311,11 +319,14 @@ body {
   width: 48px;
   height: 48px;
   overflow: hidden;
-  -webkit-transition: width, 0.4s;
-  -moz-transition: width, 0.4s;
-  -ms-transition: width, 0.4s;
-  -o-transition: width, 0.4s;
-  transition: width, 0.4s; }
+  -moz-transition-property: width;
+  -webkit-transition-property: width;
+  -o-transition-property: width;
+  transition-property: width;
+  -moz-transition-duration: 0.4s;
+  -webkit-transition-duration: 0.4s;
+  -o-transition-duration: 0.4s;
+  transition-duration: 0.4s; }
   .primary-nav-link:hover {
     color: white;
     width: 140px; }
@@ -383,12 +394,22 @@ body {
   margin: 0 0 10px; }
 
 .post-excerpt {
-  width: 70%;
+  width: 65%;
   float: right; }
 
+.post-inner {
+  min-height: 180px;
+  background-color: white;
+  padding: 20px; }
+
+.post-title a {
+  color: #444444;
+  text-decoration: none; }
+
 .post-meta {
-  width: 30%;
-  float: right; }
+  width: 35%;
+  float: right;
+  text-transform: uppercase; }
 
 .post-thumbnail {
   display: block;
@@ -396,14 +417,54 @@ body {
   .post-thumbnail img {
     width: 100%;
     height: auto;
-    min-height: 100px;
+    min-height: 150px;
     background: white; }
+
+.pub-date {
+  position: relative;
+  overflow: hidden;
+  display: block;
+  margin-right: 5px; }
+  .pub-date div {
+    background-color: #b637ff;
+    font-size: 14px;
+    line-height: 1;
+    padding: 2px 5px;
+    text-align: right; }
+
+.pub-day {
+  float: left;
+  font-size: 25px !important;
+  width: 40px;
+  text-align: center !important;
+  padding: 8px 5px !important; }
+
+.pub-month, .pub-year {
+  margin: 0 0 0 55px; }
+
+.pub-month {
+  margin-bottom: 5px; }
+
+.post-meta-date {
+  width: 65%;
+  float: left; }
+
+.post-meta-comments {
+  width: 35%;
+  float: left;
+  text-align: center;
+  font-size: 12px; }
+
+.comment-total {
+  font-size: 20px;
+  line-height: 1;
+  margin: 0 0 4px; }
 
 /* =Layout elements
 ----------------------------------------------------------------------------- */
 .dark-content-box {
   background: black;
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(0, 0, 0, 0.75);
   padding: 10px;
   color: white; }
 
